Update and rename WebUI.yml to WebUi.yml

--- a/.github/workflows/WebUi.yml
+++ b/.github/workflows/WebUi.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'digitectoolweb.client/**'
-      - '.github/workflows/ChatUi.yml'
+      - '.github/workflows/WebUi.yml'
 
 jobs:
   build:
