--- a/.github/workflows/WebUi.yml
+++ b/.github/workflows/WebUi.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Deploy new container
         run: |
           CONTAINER_NAME=DigitecToolWeb
-          docker run -d -p 295:80 --name $CONTAINER_NAME digitecwebbuild:$(git rev-parse --short "$GITHUB_SHA")
+          docker run -d -p 300:80 -p 301:443 --name $CONTAINER_NAME digitecwebbuild:$(git rev-parse --short "$GITHUB_SHA")
