--- a/digitectoolui/src/nginx.conf
+++ b/digitectoolui/src/nginx.conf
@@ -1,5 +1,8 @@
 server {
-    listen 80;
+    listen 443 ssl;
+
+        ssl_certificate off;
+        ssl_certificate_key off;
 
     location / {
         root /usr/share/nginx/html;
