--- a/digitectoolui/src/nginx.conf
+++ b/digitectoolui/src/nginx.conf
@@ -1,8 +1,19 @@
 server {
-    listen 443 ssl;
+    listen 80;
+    server_name digitec.hackster.ch www.digitec.hackster.ch;
 
-        ssl_certificate off;
-        ssl_certificate_key off;
+    # Redirect HTTP to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name digitec.hackster.ch www.digitec.hackster.ch;
+
+    ssl_certificate off;
+    ssl_certificate_key off;
+
+    # other SSL configurations...
 
     location / {
         root /usr/share/nginx/html;
