--- a/DigitecToolAPI/DigitecToolAPI.csproj
+++ b/DigitecToolAPI/DigitecToolAPI.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
-    <UserSecretsId>7e2e94e9-7654-4915-b19b-669f0caed75b</UserSecretsId>
+    <UserSecretsId>6c35ec75-fee8-41f0-b0a3-60f549e086ac</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
@@ -16,6 +16,12 @@
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.23.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DataBase\Login\" />
+    <Folder Include="DataBase\User\" />
+    <Folder Include="Functions\Authentication\" />
   </ItemGroup>
 
 </Project>
