--- a/digitectoolui/public/manifest.json
+++ b/digitectoolui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Digitec Maintanance",
+  "name": "Onlinetool für Digitec Galaxus Maintanance",
   "icons": [
     {
       "src": "favicon.ico",
